@@ -6,6 +6,7 @@ date: dd/mm/yyy
   * add the possibility to delete a task in remote alignment services
   * remove checks for local projects in the dataset discovery procedure
   * add the possibility to customize the treshold in bytes on the data to be profiled during a preload
+  * index preloaded data for fulltext search
   * fix NullPointerException in OntologyManager triggered by an attempt to fetch RDF data from an URL that does
     not return a Content-Type
   * fixed several bugs in the search regarding the use of special characters
